add backup skeleton

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -48,6 +48,7 @@
     - memcached
     - software-properties-common
     - ansible
+    - s3cmd
   when: ansible_os_family == "Debian"
 
 # @development is a groupinstall, see https://coderwall.com/p/k6goya
